Arrelgar errores de borrarlistas, poner limitadores en los reportes y formularios repsecto al limite de cantidad y factura, también poner filtros.

--- a/app/src/main/res/layout/fragment_almacenes.xml
+++ b/app/src/main/res/layout/fragment_almacenes.xml
@@ -40,6 +40,7 @@
             android:layout_height="wrap_content"
             android:textColorHint="@color/color_list"
             android:layout_gravity="end"
+            app:boxStrokeColor="@color/color_list"
             android:gravity="end"
             style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
 
