--- a/app/src/main/res/layout/fragment_editar_sin_factura.xml
+++ b/app/src/main/res/layout/fragment_editar_sin_factura.xml
@@ -169,8 +169,9 @@
                 android:layout_marginHorizontal="90dp"
                 android:hint="@string/placeholder_cantidad_sin_factura"
                 android:backgroundTint="@color/color_list"
-                android:inputType="phone"
+                android:inputType="number"
                 android:gravity="center"
+                android:maxLength="8"
                 android:textColor="@color/black"
                 android:textColorHint="@color/color_list"
                 android:textSize="15sp"
