--- a/app/src/main/res/layout/fragment_anadir_datos.xml
+++ b/app/src/main/res/layout/fragment_anadir_datos.xml
@@ -38,28 +38,22 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/app_name"
+                    android:layout_marginTop="35dp"
                     android:textSize="40sp"
                     android:textColor="@color/black"
                     android:layout_gravity="center"/>
 
                 <!-- Letreros blancos -->
 
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/cvAWarehouse1"
-                    android:layout_width="100dp"
-                    android:layout_height="30dp"
-                    app:cardBackgroundColor="@color/color_list"
-                    android:layout_marginHorizontal="50dp"
-                    android:layout_marginVertical="400dp">
-                </androidx.cardview.widget.CardView>
+
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cvAWarehouse2"
                     android:layout_width="100dp"
                     android:layout_height="30dp"
                     app:cardBackgroundColor="@color/color_list"
-                    android:layout_marginStart="250dp"
-                    android:layout_marginVertical="400dp">
+                    android:layout_marginStart="150dp"
+                    android:layout_marginVertical="430dp">
 
 
 
