--- a/app/src/main/res/layout/fragment_anadir_producto.xml
+++ b/app/src/main/res/layout/fragment_anadir_producto.xml
@@ -84,6 +84,7 @@
                     android:hint="@string/placeholder_peso_producto"
                     android:inputType="numberDecimal"
                     android:textColor="@color/black"
+                    android:maxLength="8"
                     android:textColorHint="@color/color_list"
                     android:textSize="15sp"
                     android:textStyle="bold" />
@@ -113,6 +114,7 @@
                     android:singleLine="true"
                     android:inputType="numberDecimal"
                     android:textColor="@color/black"
+                    android:maxLength="8"
                     android:textColorHint="@color/color_list"
                     android:textSize="15sp"
                     android:textStyle="bold" />
@@ -288,6 +290,7 @@
                     android:backgroundTint="@color/color_list"
                     android:gravity="center"
                     android:maxLines="1"
+                    android:maxLength="8"
                     android:singleLine="true"
                     android:hint="@string/placeholder_unidades_embalaje"
                     android:inputType="number"
