--- a/app/src/main/res/layout/fragment_anadir_transferencia.xml
+++ b/app/src/main/res/layout/fragment_anadir_transferencia.xml
@@ -125,7 +125,7 @@
                 android:id="@+id/tvAlmacenDestino"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginHorizontal="110dp"
+                android:gravity="center"
                 android:layout_marginVertical="30dp"
                 android:text="@string/textView_almacen_destino"
                 android:textColor="@color/black"
@@ -167,7 +167,7 @@
                 android:id="@+id/tvTransferenciaComentarios"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginHorizontal="140dp"
+                android:gravity="center"
                 android:layout_marginVertical="30dp"
                 android:text="@string/textView_transferencia_comentarios"
                 android:textColor="@color/black"
@@ -252,7 +252,7 @@
             <androidx.core.widget.NestedScrollView
                 android:id="@+id/nsvElegirProducto"
                 android:layout_width="match_parent"
-                android:layout_height="180dp"
+                android:layout_height="240dp"
                 android:fillViewport="true">
 
                 <LinearLayout
@@ -271,7 +271,7 @@
 
                 <Button
                     android:id="@+id/bActualizarRecyclerView"
-                    android:layout_width="130dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:layout_marginVertical="10dp"
