--- a/app/src/main/res/layout/fragment_editar_factura_entrada.xml
+++ b/app/src/main/res/layout/fragment_editar_factura_entrada.xml
@@ -251,7 +251,7 @@
             <androidx.core.widget.NestedScrollView
                 android:id="@+id/nsvElegirProductoEditar"
                 android:layout_width="match_parent"
-                android:layout_height="180dp"
+                android:layout_height="240dp"
                 android:fillViewport="true">
 
                 <LinearLayout
@@ -298,7 +298,7 @@
 
             <Button
                 android:id="@+id/bActualizarRecyclerViewEditar"
-                android:layout_width="130dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_marginVertical="5dp"
