--- a/app/src/main/res/layout/fragment_editar_producto.xml
+++ b/app/src/main/res/layout/fragment_editar_producto.xml
@@ -80,6 +80,7 @@
                     android:gravity="center"
                     android:maxLines="1"
                     android:singleLine="true"
+                    android:maxLength="8"
                     android:hint="@string/placeholder_peso_producto"
                     android:inputType="numberDecimal"
                     android:textColor="@color/black"
@@ -113,6 +114,7 @@
                     android:inputType="numberDecimal"
                     android:textColor="@color/black"
                     android:textColorHint="@color/color_list"
+                    android:maxLength="8"
                     android:textSize="15sp"
                     android:textStyle="bold" />
 
@@ -329,6 +331,7 @@
                     android:backgroundTint="@color/color_list"
                     android:gravity="center"
                     android:maxLines="1"
+                    android:maxLength="8"
                     android:singleLine="true"
                     android:hint="@string/placeholder_unidades_embalaje"
                     android:inputType="number"
