--- a/app/src/main/res/layout/fragment_editar_transferencia.xml
+++ b/app/src/main/res/layout/fragment_editar_transferencia.xml
@@ -267,7 +267,7 @@
                 <androidx.core.widget.NestedScrollView
                     android:id="@+id/nsvElegirProducto"
                     android:layout_width="match_parent"
-                    android:layout_height="180dp"
+                    android:layout_height="240dp"
                     android:fillViewport="true">
 
                     <LinearLayout
@@ -286,7 +286,7 @@
 
                 <Button
                     android:id="@+id/bActualizarRecyclerView"
-                    android:layout_width="130dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:layout_marginVertical="10dp"
