--- a/app/src/main/res/layout/fragment_elegir_producto_editar_transferencia.xml
+++ b/app/src/main/res/layout/fragment_elegir_producto_editar_transferencia.xml
@@ -88,28 +88,6 @@
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_marginVertical="10dp"
-                    android:text="@string/textView_codigo_de_barra"
-                    android:textColor="@color/black"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
-
-                <EditText
-                    android:id="@+id/etCodigoDeBarra"
-                    android:layout_width="220dp"
-                    android:layout_height="wrap_content"
-                    android:textColorHint="@color/color_list"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:hint="@string/placeholder_codigo_de_barra"
-                    android:textColor="@color/black"/>
-
                     <!--  <Button
                           android:id="@+id/bAnadirParametros"
                           android:layout_width="wrap_content"
@@ -161,6 +139,7 @@
                             android:textColorHint="@color/color_list"
                             android:inputType="number"
                             android:textColor="@color/black"
+                            android:maxLength="8"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"/>
 
@@ -207,6 +186,7 @@
                             android:layout_height="50dp"
                             android:layout_marginStart="15dp"
                             android:gravity="center"
+                            android:maxLength="8"
                             android:textColor="@color/black"
                             android:hint="@string/numero_de_cajas"
                             android:textColorHint="@color/color_list"
@@ -225,6 +205,7 @@
                             android:layout_height="50dp"
                             android:layout_marginStart="15dp"
                             android:gravity="center"
+                            android:maxLength="8"
                             android:textColor="@color/black"
                             android:hint="@string/Articulos_por_caja"
                             android:textColorHint="@color/color_list"
@@ -233,6 +214,28 @@
                     </LinearLayout>
 
                 </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_marginVertical="10dp"
+                    android:text="@string/textView_codigo_de_barra"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/etCodigoDeBarra"
+                    android:layout_width="220dp"
+                    android:layout_height="wrap_content"
+                    android:textColorHint="@color/color_list"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:hint="@string/placeholder_codigo_de_barra"
+                    android:textColor="@color/black"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
