--- a/app/src/main/res/layout/fragment_elegir_producto_factura_salida.xml
+++ b/app/src/main/res/layout/fragment_elegir_producto_factura_salida.xml
@@ -88,28 +88,6 @@
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_marginVertical="10dp"
-                    android:text="@string/textView_codigo_de_barra"
-                    android:textColor="@color/black"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
-
-                <EditText
-                    android:id="@+id/etCodigoDeBarraFacturaSalida"
-                    android:layout_width="220dp"
-                    android:layout_height="wrap_content"
-                    android:textColorHint="@color/color_list"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:hint="@string/placeholder_codigo_de_barra"
-                    android:textColor="@color/black"/>
-
                 <!--  <Button
                       android:id="@+id/bAnadirParametros"
                       android:layout_width="wrap_content"
@@ -162,7 +140,8 @@
                             android:inputType="number"
                             android:textColor="@color/black"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="10dp"/>
+                            android:layout_marginStart="10dp"
+                            android:maxLength="8"/>
 
                         <ImageButton
                             android:id="@+id/bmasFacturaSalida"
@@ -210,7 +189,8 @@
                             android:textColor="@color/black"
                             android:hint="@string/numero_de_cajas"
                             android:textColorHint="@color/color_list"
-                            android:inputType="number" />
+                            android:inputType="number"
+                            android:maxLength="8"/>
 
                         <ImageView
                             android:layout_width="wrap_content"
@@ -228,7 +208,8 @@
                             android:textColor="@color/black"
                             android:hint="@string/Articulos_por_caja"
                             android:textColorHint="@color/color_list"
-                            android:inputType="number" />
+                            android:inputType="number"
+                            android:maxLength="8"/>
 
                     </LinearLayout>
 
@@ -253,7 +234,30 @@
                     android:hint="Escriba el precio de venta"
                     android:textColor="@color/black"
                     android:textColorHint="@color/color_list"
+                    android:maxLength="8"
                     android:layout_marginTop="5dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_marginVertical="10dp"
+                    android:text="@string/textView_codigo_de_barra"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/etCodigoDeBarraFacturaSalida"
+                    android:layout_width="220dp"
+                    android:layout_height="wrap_content"
+                    android:textColorHint="@color/color_list"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:hint="@string/placeholder_codigo_de_barra"
+                    android:textColor="@color/black"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
