--- a/app/src/main/res/layout/fragment_elegir_producto_remover.xml
+++ b/app/src/main/res/layout/fragment_elegir_producto_remover.xml
@@ -88,27 +88,7 @@
 
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:layout_marginVertical="10dp"
-                        android:text="@string/textView_codigo_de_barra"
-                        android:textColor="@color/black"
-                        android:textSize="15sp"
-                        android:textStyle="bold" />
 
-                    <EditText
-                        android:id="@+id/etCodigoDeBarraRemover"
-                        android:layout_width="220dp"
-                        android:layout_height="wrap_content"
-                        android:textColorHint="@color/color_list"
-                        android:textSize="15sp"
-                        android:textStyle="bold"
-                        android:layout_gravity="center"
-                        android:gravity="center"
-                        android:hint="@string/placeholder_codigo_de_barra"
-                        android:textColor="@color/black"/>
 
                     <!--  <Button
                           android:id="@+id/bAnadirParametros"
@@ -160,6 +140,7 @@
                                 android:hint="Unidades"
                                 android:textColorHint="@color/color_list"
                                 android:inputType="number"
+                                android:maxLength="8"
                                 android:textColor="@color/black"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="10dp"/>
@@ -208,6 +189,7 @@
                                 android:layout_marginStart="15dp"
                                 android:gravity="center"
                                 android:textColor="@color/black"
+                                android:maxLength="8"
                                 android:hint="@string/numero_de_cajas"
                                 android:textColorHint="@color/color_list"
                                 android:inputType="number" />
@@ -228,6 +210,7 @@
                                 android:textColor="@color/black"
                                 android:hint="@string/Articulos_por_caja"
                                 android:textColorHint="@color/color_list"
+                                android:maxLength="8"
                                 android:inputType="number" />
 
                         </LinearLayout>
@@ -249,10 +232,34 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:gravity="center"
+                        android:textColor="@color/black"
                         android:inputType="number"
                         android:hint="Escriba el precio de venta"
                         android:textColorHint="@color/color_list"
+                        android:maxLength="8"
                         android:layout_marginTop="5dp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:layout_marginVertical="10dp"
+                        android:text="@string/textView_codigo_de_barra"
+                        android:textColor="@color/black"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+
+                    <EditText
+                        android:id="@+id/etCodigoDeBarraRemover"
+                        android:layout_width="220dp"
+                        android:layout_height="wrap_content"
+                        android:textColorHint="@color/color_list"
+                        android:textSize="15sp"
+                        android:textStyle="bold"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:hint="@string/placeholder_codigo_de_barra"
+                        android:textColor="@color/black"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
