--- a/app/src/main/res/layout/fragment_inventario.xml
+++ b/app/src/main/res/layout/fragment_inventario.xml
@@ -26,6 +26,7 @@
             android:layout_height="wrap_content"
             android:textColorHint="@color/color_list"
             android:layout_marginHorizontal="70dp"
+            app:boxStrokeColor="@color/color_list"
             style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
 
             <AutoCompleteTextView
