--- a/app/src/main/res/layout/fragment_remover_inventario.xml
+++ b/app/src/main/res/layout/fragment_remover_inventario.xml
@@ -578,7 +578,7 @@
             <androidx.core.widget.NestedScrollView
                 android:id="@+id/nsvElegirProductoRemover"
                 android:layout_width="match_parent"
-                android:layout_height="180dp"
+                android:layout_height="240dp"
                 android:fillViewport="true">
 
                 <LinearLayout
@@ -625,7 +625,7 @@
 
             <Button
                 android:id="@+id/bActualizarRecyclerViewRemover"
-                android:layout_width="130dp"
+                android:layout_width="wrap_content"
                 android:layout_marginTop="15dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
