--- a/app/src/main/res/layout/fragment_tipos_de_productos.xml
+++ b/app/src/main/res/layout/fragment_tipos_de_productos.xml
@@ -41,6 +41,7 @@
             android:textColorHint="@color/color_list"
             android:layout_gravity="end"
             android:gravity="end"
+            app:boxStrokeColor="@color/color_list"
             style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
 
             <AutoCompleteTextView
