--- a/app/src/main/res/layout/item_inventario.xml
+++ b/app/src/main/res/layout/item_inventario.xml
@@ -14,11 +14,11 @@
 
         <TextView
             android:id="@+id/tvProductoInventario"
-            android:layout_width="wrap_content"
+            android:layout_width="220dp"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:layout_gravity="center|start"
-            android:layout_marginStart="40dp"
+            android:layout_marginStart="20dp"
             android:layout_height="wrap_content"/>
 
          <TextView
@@ -26,7 +26,7 @@
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="20sp"
-             android:layout_marginEnd="40dp"
+             android:layout_marginEnd="20dp"
              android:layout_gravity="center|end"
              android:textColor="@color/black"
              tools:text="prueba"/>
